# fun-with-stylus

./: .env.example  .gitignore  README.md
ballot/: Cargo.toml  Makefile  README.md
ballot/scripts/: demo.sh  setup.sh
ballot/src/: lib.rs  main.rs
ballot/src/solidity/: Ballot.sol
escrow/: Cargo.toml  Makefile  README.md
escrow/scripts/: MockERC20.sol  demo.sh  setup.sh
escrow/src/: lib.rs  main.rs
escrow/src/solidity/: Escrow.sol
